Move back into cluster

--- a/kubernetes/main/apps/networking/kustomization.yaml
+++ b/kubernetes/main/apps/networking/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomization
+  - ./cloudflare-ddns/ks.yaml
   - ./external-dns/ks.yaml
   - ./external-services/ks.yaml
   - ./nginx/ks.yaml
