--- a/kubernetes/main/apps/default/authelia/app/config/configuration.yaml
+++ b/kubernetes/main/apps/default/authelia/app/config/configuration.yaml
@@ -148,7 +148,7 @@ identity_providers:
         pre_configured_consent_duration: 1y
         scopes: ["openid", "profile", "email"]
         redirect_uris:
-          ["https://immich.${SECRET_DOMAIN}/auth/login", "app.immich:/"]
+          ["https://immich.${SECRET_DOMAIN}/auth/login", "app.immich:///oauth-callback"]
         userinfo_signed_response_alg: none
       - client_name: Minio
         client_id: minio
