--- a/kubernetes/main/apps/default/plex/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/plex/app/helmrelease.yaml
@@ -120,3 +120,10 @@ spec:
         globalMounts:
           - path: /media
             readOnly: true
+      photos:
+        type: nfs
+        server: nas.${SECRET_HOME_DOMAIN}
+        path: /spool/photos
+        globalMounts:
+          - path: /photos
+            readOnly: true
