--- a/kubernetes/main/apps/default/redlib/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/redlib/app/helmrelease.yaml
@@ -32,8 +32,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/auricom/redlib
-              tag: 0.35.1@sha256:1b747c74a269cd46fd63ec510f3c253f5598c60722f644c505bec528c578e1a5
+              repository: quay.io/redlib/redlib
+              tag: latest@sha256:a7d6de74290f250daf54d3da105fbcbcab2356dc107ad08635d86f89a98472ae
             env:
               REDLIB_DEFAULT_FRONT_PAGE: "default"
               REDLIB_DEFAULT_HIDE_HLS_NOTIFICATION: "on"
