--- a/kubernetes/main/apps/networking/external-dns/app/pihole-nas/kustomization.yaml
+++ b/kubernetes/main/apps/networking/external-dns/app/pihole-nas/kustomization.yaml
@@ -2,6 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./cloudflare
-  - ./pihole
-  - ./pihole-nas
+  - ./helmrelease.yaml
+  - ./secret.sops.yaml
