Update cilium annotations

--- a/kubernetes/main/apps/databases/cloudnative-pg/cluster/service.yaml
+++ b/kubernetes/main/apps/databases/cloudnative-pg/cluster/service.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: databases
   annotations:
     external-dns.alpha.kubernetes.io/hostname: postgres.${SECRET_DOMAIN}
-    io.cilium/lb-ipam-ips: ${SVC_POSTGRES_ADDR}
+    lbipam.cilium.io/ips: ${SVC_POSTGRES_ADDR}
 spec:
   type: LoadBalancer
   ports:
