--- a/kubernetes/main/apps/default/gitea/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/gitea/app/helmrelease.yaml
@@ -132,7 +132,7 @@ spec:
       ssh:
         type: LoadBalancer
         annotations:
-          io.cilium/lb-ipam-ips: 192.168.178.229
+          lbipam.cilium.io/ips: 192.168.178.229
         port: 222
         externalTrafficPolicy: Cluster
     ingress:
