--- a/kubernetes/main/apps/default/mosquitto/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/mosquitto/app/helmrelease.yaml
@@ -66,7 +66,7 @@ spec:
         type: LoadBalancer
         annotations:
           external-dns.alpha.kubernetes.io/hostname: mqtt.${SECRET_DOMAIN}
-          io.cilium/lb-ipam-ips: ${SVC_MQTT_ADDR}
+          lbipam.cilium.io/ips: ${SVC_MQTT_ADDR}
         externalTrafficPolicy: Cluster
         ports:
           http:
