--- a/kubernetes/main/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/home-assistant/app/helmrelease.yaml
@@ -112,11 +112,21 @@ spec:
             port: 1900
             protocol: UDP
             targetPort: 1900
-          govee:
+          govee1:
+            enabled: true
+            port: 4001
+            protocol: UDP
+            targetPort: 4001
+          govee2:
             enabled: true
             port: 4002
             protocol: UDP
             targetPort: 4002
+          govee3:
+            enabled: true
+            port: 4003
+            protocol: UDP
+            targetPort: 4003
       codeserver:
         type: ClusterIP
         controller: home-assistant
