--- a/kubernetes/main/apps/cert-manager/cert-manager/app/helmrelease.yaml
+++ b/kubernetes/main/apps/cert-manager/cert-manager/app/helmrelease.yaml
@@ -20,9 +20,10 @@ spec:
   upgrade:
     crds: CreateReplace
   values:
+    crds:
+      enabled: true
     dns01RecursiveNameservers: https://1.1.1.1:443/dns-query,https://1.0.0.1:443/dns-query
     dns01RecursiveNameserversOnly: true
-    installCRDs: true
     prometheus:
       enabled: true
       servicemonitor:
