--- a/kubernetes/main/apps/default/tautulli/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/tautulli/app/helmrelease.yaml
@@ -33,14 +33,11 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/tautulli/tautulli
-              tag: v2.14.5@sha256:6017b491d8e9100a97391b639fff5824ad36a315c69aae3c9ed78407994a626e
-            command: ["/usr/local/bin/python", "Tautulli.py"]
-            args: [
-              "--config", "/config/config.ini",
-              "--datadir", "/config",
-              "--port", "80"
-            ]
+              repository: ghcr.io/onedr0p/tautulli
+              tag: 2.14.5@sha256:69d469967b08c2ab977d5b63f14cdbc85ac1f9ccaf0cf5c3669dac903db6b243
+            env:
+              TZ: ${TZ}
+              TAUTULLI__PORT: &port 80
             resources:
               requests:
                 cpu: 26m
