--- a/kubernetes/main/apps/databases/cloudnative-pg/cluster/scheduled-backup.yaml
+++ b/kubernetes/main/apps/databases/cloudnative-pg/cluster/scheduled-backup.yaml
@@ -4,7 +4,7 @@ metadata:
   name: postgres
   namespace: databases
 spec:
-  schedule: "@weekly"
+  schedule: "@daily"
   immediate: true
   backupOwnerReference: self
   cluster:
