--- a/kubernetes/main/apps/default/immich/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/immich/app/helmrelease.yaml
@@ -52,11 +52,15 @@ spec:
             image:
               repository: ghcr.io/immich-app/immich-server
               tag: v1.118.2@sha256:f158810c90f80162f9b08729bbaec963731f12662960be38ff93093b78a0bbdf
+            env: &env-common
+              REDIS_HOSTNAME: dragonfly.databases.svc.cluster.local
+              REDIS_PORT: "6379"
+              REDIS_DBINDEX: "1"
+              DB_VECTOR_EXTENSION: pgvector
+              IMMICH_MEDIA_LOCATION: /usr/src/app/upload
             envFrom: &envFrom
               - secretRef:
                   name: immich-secret
-              - configMapRef:
-                  name: immich-config
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
@@ -88,6 +92,7 @@ spec:
             image:
               repository: ghcr.io/immich-app/immich-machine-learning
               tag: v1.118.2@sha256:4d89a309fd08a93649f1ae4a7572ae98f09d66b4c1dfb7916b71d31dec7eda38
+            env: *env-common
             envFrom: *envFrom
             resources:
               requests:
