--- a/kubernetes/main/apps/default/kustomization.yaml
+++ b/kubernetes/main/apps/default/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # Pre Flux-Kustomizations
   # Flux-Kustomizations
   - ./atuin/ks.yaml
   - ./audiobookshelf/ks.yaml
@@ -12,8 +11,8 @@ resources:
   - ./gitea/ks.yaml
   - ./home-assistant/ks.yaml
   - ./immich/ks.yaml
-  - ./kyoo/ks.yaml
-  - ./lidarr/ks.yaml
+  # - ./kyoo/ks.yaml
+  # - ./lidarr/ks.yaml
   - ./lldap/ks.yaml
   - ./nextcloud/ks.yaml
   - ./mosquitto/ks.yaml
