--- a/ansible/main/inventory/hosts.yaml
+++ b/ansible/main/inventory/hosts.yaml
@@ -6,10 +6,14 @@ kubernetes:
     master:
       hosts:
         nuc:
-          ansible_host: 192.168.178.10
-    worker:
-      hosts:
+          ansible_host: 192.168.20.10
         morefine:
-          ansible_host: 192.168.178.11
+          ansible_host: 192.168.20.11
         brix:
-          ansible_host: 192.168.178.12
+          ansible_host: 192.168.20.12
+    # worker:
+    #   hosts:
+    #     morefine:
+    #       ansible_host: 192.168.20.11
+    #     brix:
+    #       ansible_host: 192.168.20.12
