--- a/ansible/main/inventory/group_vars/all/main.yaml
+++ b/ansible/main/inventory/group_vars/all/main.yaml
@@ -3,7 +3,7 @@
 k3s_release_version: "v1.31.0+k3s1"
 k3s_install_hard_links: true
 k3s_become: true
-k3s_etcd_datastore: false
+k3s_etcd_datastore: true
 k3s_registration_address: "192.168.20.10"
 # /var/lib/rancher/k3s/server/manifests
 k3s_server_manifests_urls:
