--- a/kubernetes/main/apps/databases/kustomization.yaml
+++ b/kubernetes/main/apps/databases/kustomization.yaml
@@ -9,4 +9,4 @@ resources:
   - ./dragonfly/ks.yaml
   - ./postgres-backup/ks.yaml
   # - ./redis/ks.yaml
-  - ./influxdb/ks.yaml
+  # - ./influxdb/ks.yaml
