--- a/kubernetes/main/apps/default/kustomization.yaml
+++ b/kubernetes/main/apps/default/kustomization.yaml
@@ -2,32 +2,32 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # Flux-Kustomizations
-  - ./atuin/ks.yaml
-  - ./audiobookshelf/ks.yaml
+  # - ./atuin/ks.yaml
+  # - ./audiobookshelf/ks.yaml
   - ./authelia/ks.yaml
-  - ./bazarr/ks.yaml
-  - ./calibre-web/ks.yaml
-  - ./fritzbox-exporter/ks.yaml
-  - ./gitea/ks.yaml
-  - ./home-assistant/ks.yaml
-  - ./immich/ks.yaml
-  # - ./kyoo/ks.yaml
-  # - ./lidarr/ks.yaml
-  - ./lldap/ks.yaml
-  - ./nextcloud/ks.yaml
-  - ./mosquitto/ks.yaml
-  - ./overseerr/ks.yaml
-  - ./paperless/ks.yaml
-  - ./plex/ks.yaml
-  - ./prowlarr/ks.yaml
-  - ./radarr/ks.yaml
-  - ./radicale/ks.yaml
-  - ./recyclarr/ks.yaml
-  - ./redlib/ks.yaml
-  - ./sabnzbd/ks.yaml
-  - ./smtp-relay/ks.yaml
-  - ./sonarr/ks.yaml
-  - ./tandoor/ks.yaml
-  - ./tautulli/ks.yaml
-  - ./vaultwarden/ks.yaml
-  - ./zigbee2mqtt/ks.yaml
+  # - ./bazarr/ks.yaml
+  # - ./calibre-web/ks.yaml
+  # - ./fritzbox-exporter/ks.yaml
+  # - ./gitea/ks.yaml
+  # - ./home-assistant/ks.yaml
+  # - ./immich/ks.yaml
+  # # - ./kyoo/ks.yaml
+  # # - ./lidarr/ks.yaml
+  # - ./lldap/ks.yaml
+  # - ./nextcloud/ks.yaml
+  # - ./mosquitto/ks.yaml
+  # - ./overseerr/ks.yaml
+  # - ./paperless/ks.yaml
+  # - ./plex/ks.yaml
+  # - ./prowlarr/ks.yaml
+  # - ./radarr/ks.yaml
+  # - ./radicale/ks.yaml
+  # - ./recyclarr/ks.yaml
+  # - ./redlib/ks.yaml
+  # - ./sabnzbd/ks.yaml
+  # - ./smtp-relay/ks.yaml
+  # - ./sonarr/ks.yaml
+  # - ./tandoor/ks.yaml
+  # - ./tautulli/ks.yaml
+  # - ./vaultwarden/ks.yaml
+  # - ./zigbee2mqtt/ks.yaml
