--- a/kubernetes/main/apps/databases/cloudnative-pg/cluster/cluster16.yaml
+++ b/kubernetes/main/apps/databases/cloudnative-pg/cluster/cluster16.yaml
@@ -15,9 +15,9 @@ spec:
   enableSuperuserAccess: true
   primaryUpdateMethod: switchover
   # Note: Bootstrap is needed when recovering from an existing cnpg cluster
-  # bootstrap:
-  #   recovery:
-  #     source: &previousCluster postgres16-v2
+  bootstrap:
+    recovery:
+      source: &previousCluster postgres16-v3
   postgresql:
     # shared_preload_libraries: ["vectors.so"]
     parameters:
@@ -45,7 +45,7 @@ spec:
         maxParallel: 8
       destinationPath: s3://postgresql/
       endpointURL: https://s3.${SECRET_HOME_DOMAIN}
-      serverName: postgres16-v3
+      serverName: postgres16-v4
       s3Credentials:
         accessKeyId:
           name: cloudnative-pg-secret
@@ -54,18 +54,18 @@ spec:
           name: cloudnative-pg-secret
           key: MINIO_SECRET_KEY
 
-  # externalClusters:
-  #   - name: *previousCluster
-  #     barmanObjectStore:
-  #       wal:
-  #         compression: bzip2
-  #         maxParallel: 8
-  #       destinationPath: s3://postgresql/
-  #       endpointURL: https://s3.${SECRET_HOME_DOMAIN}
-  #       s3Credentials:
-  #         accessKeyId:
-  #           name: cloudnative-pg-secret
-  #           key: MINIO_ACCESS_KEY
-  #         secretAccessKey:
-  #           name: cloudnative-pg-secret
-  #           key: MINIO_SECRET_KEY
+  externalClusters:
+    - name: *previousCluster
+      barmanObjectStore:
+        wal:
+          compression: bzip2
+          maxParallel: 8
+        destinationPath: s3://postgresql/
+        endpointURL: https://s3.${SECRET_HOME_DOMAIN}
+        s3Credentials:
+          accessKeyId:
+            name: cloudnative-pg-secret
+            key: MINIO_ACCESS_KEY
+          secretAccessKey:
+            name: cloudnative-pg-secret
+            key: MINIO_SECRET_KEY
