--- a/kubernetes/main/apps/default/kustomization.yaml
+++ b/kubernetes/main/apps/default/kustomization.yaml
@@ -2,18 +2,18 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # Flux-Kustomizations
-  # - ./atuin/ks.yaml
+  - ./atuin/ks.yaml
   # - ./audiobookshelf/ks.yaml
   - ./authelia/ks.yaml
   # - ./bazarr/ks.yaml
   # - ./calibre-web/ks.yaml
-  # - ./fritzbox-exporter/ks.yaml
+  - ./fritzbox-exporter/ks.yaml
   # - ./gitea/ks.yaml
   # - ./home-assistant/ks.yaml
   # - ./immich/ks.yaml
   # # - ./kyoo/ks.yaml
   # # - ./lidarr/ks.yaml
-  # - ./lldap/ks.yaml
+  - ./lldap/ks.yaml
   # - ./nextcloud/ks.yaml
   # - ./mosquitto/ks.yaml
   # - ./overseerr/ks.yaml
@@ -25,7 +25,7 @@ resources:
   # - ./recyclarr/ks.yaml
   # - ./redlib/ks.yaml
   # - ./sabnzbd/ks.yaml
-  # - ./smtp-relay/ks.yaml
+  - ./smtp-relay/ks.yaml
   # - ./sonarr/ks.yaml
   # - ./tandoor/ks.yaml
   # - ./tautulli/ks.yaml
