--- a/kubernetes/main/apps/databases/kustomization.yaml
+++ b/kubernetes/main/apps/databases/kustomization.yaml
@@ -8,5 +8,4 @@ resources:
   - ./cloudnative-pg/ks.yaml
   - ./dragonfly/ks.yaml
   - ./postgres-backup/ks.yaml
-  # - ./redis/ks.yaml
-  # - ./influxdb/ks.yaml
+  - ./influxdb/ks.yaml
