--- a/ansible/main/inventory/group_vars/master/main.yaml
+++ b/ansible/main/inventory/group_vars/master/main.yaml
@@ -20,7 +20,7 @@ k3s_server:
   cluster-cidr: 10.42.0.0/16
   service-cidr: 10.43.0.0/16
   write-kubeconfig-mode: "0644"
-  etcd-expose-metrics: true
+  etcd-expose-metrics: false
   kube-controller-manager-arg:
     - bind-address=0.0.0.0
   kube-scheduler-arg:
