--- a/kubernetes/main/apps/networking/multus/app/helmrelease.yaml
+++ b/kubernetes/main/apps/networking/multus/app/helmrelease.yaml
@@ -10,7 +10,7 @@ spec:
   chart:
     spec:
       chart: multus
-      version: 5.0.4
+      version: 5.0.7
       sourceRef:
         kind: HelmRepository
         name: angelnu
@@ -19,12 +19,11 @@ spec:
   values:
     image:
       repository: ghcr.io/k8snetworkplumbingwg/multus-cni
-      tag: v4.0.2-thick
-
+      tag: v4.1.3-thick@sha256:551ae885bbd39817ab146952556baa859d532ac3379952dea3ccf2680977d58e
     cni:
       image:
         repository: ghcr.io/angelnu/cni-plugins
-        tag: 1.4.0
+        tag: 1.5.1@sha256:e4bedec8c7a02872cfe730a7d1a873e3b834ed9aa79b0f9a7ae627e467f58e42
 
       paths:
         config: /etc/cni/net.d
