--- a/kubernetes/main/apps/networking/multus/config/net-attach-iot.yaml
+++ b/kubernetes/main/apps/networking/multus/config/net-attach-iot.yaml
@@ -12,7 +12,7 @@ spec:
       "plugins": [
         {
           "type": "macvlan",
-          "master": "enx00e04c68013b",
+          "master": "eth0.30",
           "mode": "bridge",
           "capabilities": {
             "ips": true
@@ -20,7 +20,7 @@ spec:
           "ipam": {
             "type": "static",
             "routes": [
-              { "dst": "192.168.178.0/24", "gw": "192.168.178.1" }
+              { "dst": "192.168.30.0/24", "gw": "192.168.30.1" }
             ]
           }
         }
