--- a/kubernetes/main/apps/networking/multus/config/net-attach-iot.yaml
+++ b/kubernetes/main/apps/networking/multus/config/net-attach-iot.yaml
@@ -12,7 +12,7 @@ spec:
       "plugins": [
         {
           "type": "macvlan",
-          "master": "eth0.30",
+          "master": "enp89s0.30",
           "mode": "bridge",
           "capabilities": {
             "ips": true
