Replace cronjob with container

--- a/kubernetes/main/apps/networking/cloudflare-ddns/app/externalsecret.yaml
+++ b/kubernetes/main/apps/networking/cloudflare-ddns/app/externalsecret.yaml
@@ -10,7 +10,7 @@ spec:
       type: Opaque
       data:
         CLOUDFLARE_EMAIL: "{{ .CLOUDFLARE_EMAIL }}"
-        CLOUDFLARE_APIKEY: "{{ .CLOUDFLARE_API_KEY }}"
+        CLOUDFLARE_API_KEY: "{{ .CLOUDFLARE_API_KEY }}"
         CLOUDFLARE_RECORD_NAME: external.{{ .CLOUDFLARE_RECORD }}
   data:
     - secretKey: CLOUDFLARE_EMAIL
