--- a/kubernetes/main/apps/networking/cloudflare-ddns/app/externalsecret.yaml
+++ b/kubernetes/main/apps/networking/cloudflare-ddns/app/externalsecret.yaml
@@ -2,7 +2,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: cloudflare-ddns
+  name: cloudflare-ddns-secret
 spec:
   target:
     deletionPolicy: Delete
