Enable multus again

--- a/kubernetes/main/apps/networking/kustomization.yaml
+++ b/kubernetes/main/apps/networking/kustomization.yaml
@@ -8,5 +8,5 @@ resources:
   - ./cloudflare-ddns/ks.yaml
   - ./external-dns/ks.yaml
   - ./external-services/ks.yaml
-  # - ./multus/ks.yaml
+  - ./multus/ks.yaml
   - ./nginx/ks.yaml
