--- a/kubernetes/main/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/home-assistant/app/helmrelease.yaml
@@ -27,14 +27,14 @@ spec:
       home-assistant:
         annotations:
           reloader.stakater.com/auto: "true"
-        pod:
-          annotations:
-            k8s.v1.cni.cncf.io/networks: |
-              [{
-                "name":"multus-iot",
-                "namespace": "networking",
-                "ips": ["192.168.30.254/24"]
-              }]
+        # pod:
+        #   annotations:
+        #     k8s.v1.cni.cncf.io/networks: |
+        #       [{
+        #         "name":"multus-iot",
+        #         "namespace": "networking",
+        #         "ips": ["192.168.30.254/24"]
+        #       }]
         initContainers:
           01-init-db:
             envFrom: &envFrom
@@ -93,33 +93,33 @@ spec:
     service:
       app:
         controller: home-assistant
-        # type: LoadBalancer
-        # annotations:
-        #   lbipam.cilium.io/ips: ${SVC_HASS_ADDR}
+        type: LoadBalancer
+        annotations:
+          lbipam.cilium.io/ips: ${SVC_HASS_ADDR}
         ports:
           http:
             port: 8123
-          # mdns-tcp:
-          #   enabled: true
-          #   port: 5353
-          #   protocol: TCP
-          #   targetPort: 5353
-          # mdns-udp:
-          #   enabled: true
-          #   port: 5353
-          #   protocol: UDP
-          #   targetPort: 5353
-          # sonos:
-          #   enabled: true
-          #   port: 1400
-          # emulated-hue:
-          #   enabled: true
-          #   port: 80
-          # upnp:
-          #   enabled: true
-          #   port: 1900
-          #   protocol: UDP
-          #   targetPort: 1900
+          mdns-tcp:
+            enabled: true
+            port: 5353
+            protocol: TCP
+            targetPort: 5353
+          mdns-udp:
+            enabled: true
+            port: 5353
+            protocol: UDP
+            targetPort: 5353
+          sonos:
+            enabled: true
+            port: 1400
+          emulated-hue:
+            enabled: true
+            port: 80
+          upnp:
+            enabled: true
+            port: 1900
+            protocol: UDP
+            targetPort: 1900
       codeserver:
         type: ClusterIP
         controller: home-assistant
