--- a/kubernetes/main/apps/networking/multus/app/helmrelease.yaml
+++ b/kubernetes/main/apps/networking/multus/app/helmrelease.yaml
@@ -24,7 +24,7 @@ spec:
       image:
         repository: ghcr.io/angelnu/cni-plugins
         tag: 1.5.1@sha256:e4bedec8c7a02872cfe730a7d1a873e3b834ed9aa79b0f9a7ae627e467f58e42
-
+      logLevel: error
       paths:
         bin: /var/lib/rancher/k3s/data/cni
         config: /var/lib/rancher/k3s/agent/etc/cni/net.d
