--- a/kubernetes/main/apps/default/kustomization.yaml
+++ b/kubernetes/main/apps/default/kustomization.yaml
@@ -3,11 +3,11 @@ kind: Kustomization
 resources:
   # Flux-Kustomizations
   - ./atuin/ks.yaml
-  # - ./audiobookshelf/ks.yaml
+  - ./audiobookshelf/ks.yaml
   - ./authelia/ks.yaml
-  # - ./bazarr/ks.yaml
-  # - ./calibre-web/ks.yaml
-  # - ./gitea/ks.yaml
+  - ./bazarr/ks.yaml
+  - ./calibre-web/ks.yaml
+  - ./gitea/ks.yaml
   - ./home-assistant/ks.yaml
   - ./immich/ks.yaml
   # # - ./kyoo/ks.yaml
@@ -15,18 +15,18 @@ resources:
   - ./lldap/ks.yaml
   - ./nextcloud/ks.yaml
   - ./mosquitto/ks.yaml
-  # - ./overseerr/ks.yaml
-  # - ./paperless/ks.yaml
+  - ./overseerr/ks.yaml
+  - ./paperless/ks.yaml
   # - ./plex/ks.yaml
   - ./prowlarr/ks.yaml
-  # - ./radarr/ks.yaml
-  # - ./radicale/ks.yaml
-  # - ./recyclarr/ks.yaml
+  - ./radarr/ks.yaml
+  - ./radicale/ks.yaml
+  - ./recyclarr/ks.yaml
   - ./redlib/ks.yaml
-  # - ./sabnzbd/ks.yaml
+  - ./sabnzbd/ks.yaml
   - ./smtp-relay/ks.yaml
-  # - ./sonarr/ks.yaml
-  # - ./tandoor/ks.yaml
-  # - ./tautulli/ks.yaml
+  - ./sonarr/ks.yaml
+  - ./tandoor/ks.yaml
+  - ./tautulli/ks.yaml
   - ./vaultwarden/ks.yaml
   - ./zigbee2mqtt/ks.yaml
