--- a/kubernetes/main/apps/default/kustomization.yaml
+++ b/kubernetes/main/apps/default/kustomization.yaml
@@ -17,7 +17,7 @@ resources:
   - ./mosquitto/ks.yaml
   - ./overseerr/ks.yaml
   - ./paperless/ks.yaml
-  # - ./plex/ks.yaml
+  - ./plex/ks.yaml
   - ./prowlarr/ks.yaml
   - ./radarr/ks.yaml
   - ./radicale/ks.yaml
