enable net-attach-iot

--- a/kubernetes/main/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/home-assistant/app/helmrelease.yaml
@@ -27,14 +27,15 @@ spec:
       home-assistant:
         annotations:
           reloader.stakater.com/auto: "true"
-        # pod:
-        #   annotations:
-        #     k8s.v1.cni.cncf.io/networks: |
-        #       [{
-        #         "name":"multus-iot",
-        #         "namespace": "networking",
-        #         "ips": ["192.168.30.254/24"]
-        #       }]
+        pod:
+          annotations:
+            k8s.v1.cni.cncf.io/networks: |
+              [{
+                "name":"multus-iot",
+                "namespace": "networking",
+                "ips": ["192.168.30.250/24"]
+                "mac": "3e:59:e4:f7:43:08"
+              }]
         initContainers:
           01-init-db:
             envFrom: &envFrom
