--- a/kubernetes/main/apps/networking/multus/config/net-attach-iot.yaml
+++ b/kubernetes/main/apps/networking/multus/config/net-attach-iot.yaml
@@ -12,7 +12,7 @@ spec:
       "plugins": [
         {
           "type": "macvlan",
-          "master": "enp89s0.30",
+          "master": "eth0.30",
           "mode": "bridge",
           "capabilities": {
             "ips": true
@@ -23,6 +23,10 @@ spec:
               { "dst": "192.168.30.0/24", "gw": "192.168.30.1" }
             ]
           }
+        },
+        {
+          "capabilities": { "mac": true },
+          "type": "tuning"
         }
       ]
     }
