--- a/kubernetes/main/apps/networking/multus/config/net-attach-iot.yaml
+++ b/kubernetes/main/apps/networking/multus/config/net-attach-iot.yaml
@@ -1,9 +1,8 @@
 ---
-apiVersion: "k8s.cni.cncf.io/v1"
+apiVersion: k8s.cni.cncf.io/v1
 kind: NetworkAttachmentDefinition
 metadata:
   name: multus-iot
-  namespace: networking
 spec:
   config: |-
     {
@@ -12,21 +11,20 @@ spec:
       "plugins": [
         {
           "type": "macvlan",
-          "master": "eth0.30",
+          "master": "iot",
           "mode": "bridge",
           "capabilities": {
             "ips": true
           },
           "ipam": {
-            "type": "static",
-            "routes": [
-              { "dst": "192.168.30.0/24", "gw": "192.168.30.1" }
-            ]
+            "type": "static"
           }
         },
         {
-          "capabilities": { "mac": true },
-          "type": "tuning"
+          "type": "tuning",
+          "capabilities": {
+            "mac": true
+          }
         }
       ]
     }
