--- a/kubernetes/main/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/main/flux/repositories/helm/kustomization.yaml
@@ -23,6 +23,7 @@ resources:
   - ./mittwald.yaml
   - ./nextcloud.yaml
   - ./node-feature-discovery.yaml
+  - ./openebs.yaml
   - ./postfinance.yaml
   - ./prometheus-community.yaml
   - ./renovate.yaml
