--- a/kubernetes/main/apps/kube-system/generic-device-plugin/app/helmrelease.yaml
+++ b/kubernetes/main/apps/kube-system/generic-device-plugin/app/helmrelease.yaml
@@ -1,4 +1,5 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -9,29 +10,30 @@ spec:
     spec:
       chart: app-template
       version: 3.5.1
+      interval: 30m
       sourceRef:
         kind: HelmRepository
         name: bjw-s
         namespace: flux-system
-  install:
-    remediation:
-      retries: 3
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      strategy: rollback
-      retries: 3
+  driftDetection:
+    mode: enabled
+
   values:
+    defaultPodOptions:
+      priorityClassName: system-node-critical
+
     controllers:
       generic-device-plugin:
         type: daemonset
+        strategy: RollingUpdate
         annotations:
           reloader.stakater.com/auto: "true"
+
         containers:
           app:
             image:
               repository: ghcr.io/squat/generic-device-plugin
-              tag: latest@sha256:ba6f0b4cf6c858d6ad29ba4d32e4da11638abbc7d96436bf04f582a97b2b8821
+              tag: 36bfc606bba2064de6ede0ff2764cbb52edff70d@sha256:ba6f0b4cf6c858d6ad29ba4d32e4da11638abbc7d96436bf04f582a97b2b8821
             args:
               - --log-level=info
               - --config=/config/config.yaml
@@ -41,13 +43,13 @@ spec:
               limits:
                 memory: 64Mi
             securityContext:
+              # privileged: true
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities:
                 drop:
                   - ALL
-    defaultPodOptions:
-      priorityClassName: system-node-critical
+
     persistence:
       config:
         type: configMap
