--- a/kubernetes/main/apps/default/kustomization.yaml
+++ b/kubernetes/main/apps/default/kustomization.yaml
@@ -3,28 +3,28 @@ kind: Kustomization
 resources:
   # Flux-Kustomizations
   # PVC
-  # - ./audiobookshelf/ks.yaml
-  # - ./calibre-web/ks.yaml
-  # - ./gitea/ks.yaml
-  # - ./home-assistant/ks.yaml
-  # - ./nextcloud/ks.yaml
-  # - ./mosquitto/ks.yaml
-  # - ./overseerr/ks.yaml
-  # - ./paperless/ks.yaml
+  - ./audiobookshelf/ks.yaml
+  - ./bazarr/ks.yaml
+  - ./calibre-web/ks.yaml
+  - ./gitea/ks.yaml
+  - ./home-assistant/ks.yaml
+  - ./nextcloud/ks.yaml
+  - ./mosquitto/ks.yaml
+  - ./overseerr/ks.yaml
+  - ./paperless/ks.yaml
   # - ./plex/ks.yaml
-  # - ./radarr/ks.yaml
-  # - ./radicale/ks.yaml
-  # - ./recyclarr/ks.yaml
-  # - ./sabnzbd/ks.yaml
-  # - ./sonarr/ks.yaml
-  # - ./tandoor/ks.yaml
-  # - ./tautulli/ks.yaml
-  # - ./vaultwarden/ks.yaml
-  # - ./zigbee2mqtt/ks.yaml
+  - ./radarr/ks.yaml
+  - ./radicale/ks.yaml
+  - ./recyclarr/ks.yaml
+  - ./sabnzbd/ks.yaml
+  - ./sonarr/ks.yaml
+  - ./tandoor/ks.yaml
+  - ./tautulli/ks.yaml
+  - ./vaultwarden/ks.yaml
+  - ./zigbee2mqtt/ks.yaml
   # No PVC
   - ./atuin/ks.yaml
   - ./authelia/ks.yaml
-  - ./bazarr/ks.yaml
   - ./immich/ks.yaml
   - ./lldap/ks.yaml
   - ./prowlarr/ks.yaml
