--- a/kubernetes/main/apps/default/zigbee2mqtt/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/zigbee2mqtt/app/helmrelease.yaml
@@ -71,7 +71,7 @@ spec:
               ZIGBEE2MQTT_CONFIG_PERMIT_JOIN: "false"
               ZIGBEE2MQTT_CONFIG_SERIAL_BAUDRATE: 115200
               ZIGBEE2MQTT_CONFIG_SERIAL_DISABLE_LED: "true"
-              ZIGBEE2MQTT_CONFIG_SERIAL_PORT: &serial-port /dev/serial/by-id/usb-Silicon_Labs_slae.sh_cc2652rb_stick_-_slaesh_s_iot_stuff_00_12_4B_00_23_93_35_0A-if00-port0
+              ZIGBEE2MQTT_CONFIG_SERIAL_PORT: /dev/serial/by-id/usb-Silicon_Labs_slae.sh_cc2652rb_stick_-_slaesh_s_iot_stuff_00_12_4B_00_23_93_35_0A-if00-port0
             envFrom:
               - secretRef:
                   name: zigbee2mqtt-secret
@@ -80,6 +80,7 @@ spec:
                 cpu: 5m
                 memory: 202M
               limits:
+                squat.ai/cc2652: 1
                 memory: 202M
             securityContext:
               privileged: true
@@ -117,10 +118,3 @@ spec:
         tls:
           - hosts:
               - *host
-
-    persistence:
-      usb:
-        enabled: true
-        type: hostPath
-        hostPath: *serial-port
-        hostPathType: CharDevice
