--- a/kubernetes/main/apps/default/kustomization.yaml
+++ b/kubernetes/main/apps/default/kustomization.yaml
@@ -12,7 +12,7 @@ resources:
   - ./mosquitto/ks.yaml
   - ./overseerr/ks.yaml
   - ./paperless/ks.yaml
-  # - ./plex/ks.yaml
+  - ./plex/ks.yaml
   - ./radarr/ks.yaml
   - ./radicale/ks.yaml
   - ./recyclarr/ks.yaml
