--- a/kubernetes/main/apps/default/zigbee2mqtt/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/zigbee2mqtt/app/helmrelease.yaml
@@ -83,19 +83,23 @@ spec:
                 squat.ai/cc2652: 1
                 memory: 202M
             securityContext:
-              privileged: true
+              allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: true
+              capabilities:
+                drop:
+                  - ALL
 
     defaultPodOptions:
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: 1000
-        runAsGroup: 1000
-        fsGroup: 1000
-        fsGroupChangePolicy: OnRootMismatch
-        supplementalGroups: [20]
-        seccompProfile: { type: RuntimeDefault }
       nodeSelector:
         cc2652.feature.node.kubernetes.io/zigbee: "true"
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 568
+        runAsGroup: 568
+        fsGroup: 568
+        fsGroupChangePolicy: OnRootMismatch
+        supplementalGroups:
+          - 20
 
     service:
       app:
